@@ -1,6 +1,6 @@
 Recent user-visible changes to Tcl:
 
-RCS: @(#) $Id: changes,v 1.24 1998/10/13 18:44:15 rjohnson Exp $
+RCS: @(#) $Id: changes,v 1.25 1998/10/13 20:05:38 rjohnson Exp $
 
 1. No more [command1] [command2] construct for grouping multiple
 commands on a single command line.
@@ -3627,3 +3627,9 @@ TclCreateProc to take both strings and "procbody". (EMS)
 10/13/98 (bug fix) The "info complete" command can now handle strings
 with NULLs embedded.  Thanks to colin@field.medicine.adelaide.edu.au 
 for providing this fix. (RJ)
+
+10/13/98 (bug fix) The "lsort -dictionary" command did not properly
+handle some numbers starting with 0.  Thanks to Richard Hipp
+<drh@acm.org> for the creating the patch and Viktor Dukhovni
+<Viktor-Dukhovni@deshaw.com> for submitting the it to Scriptics. (RJ)
+
